--- a/css/main.css
+++ b/css/main.css
@@ -9,11 +9,9 @@ html {
 *::after {
   box-sizing: inherit;
 }
-
 body {
   margin: 0;
 }
-
 .masthead {
   display: flex;
   justify-content: space-between;
@@ -24,23 +22,19 @@ body {
   color: #fff;
   font-size: 1.25rem;
 }
-
 .masthead h1 {
   display: flex;
   align-items: center;
   font-size: 1.5rem;
 }
-
 .masthead img {
   width: 2em;
   height: 2em;
   margin-right: .5rem;
 }
-
 .masthead span {
   width: 9em;
 }
-
 .nav ul {
   margin: 0;
   padding: 0;
@@ -48,12 +42,18 @@ body {
   display: flex;
   align-items: center;
 }
-
 .nav a {
   color: #fff;
   padding: .5em;
   border-radius: 1em;
   text-decoration: none;
+}
+.nav a:hover {
+  border: 2px solid #fff;
+}
+
+.nav a:focus {
+  outline: 3px solid #fff;
 }
 
 .banner {
@@ -64,13 +64,11 @@ body {
   color: #fff;
   font-size: 1.5rem;
 }
-
 .banner img {
   grid-area: banner;
   width: 100%;
 }
-
-.banner div {
+.banner section {
   grid-area: banner;
   align-self: center;
   justify-self: center;
@@ -78,25 +76,33 @@ body {
   max-width: 20em;
   text-align: center;
 }
-
 .banner h2,
 .banner p {
   margin: 0 0 1.5rem;
 }
-
 .banner a {
   display: inline-block;
   background-color: transparent;
   padding: .5em 1.5em .6em;
-  border: .3rem solid #bea59b;
+  border: .3rem solid #fff;
   border-radius: 1em;
   color: #fff;
   font-weight: bold;
   text-decoration: none;
 }
 
+.banner a:hover {
+  background-color: #fff;
+  color: #522806;
+}
+
+.banner a:focus {
+  outline: 3px solid pink;
+}
+
 .ship {
   padding: 2rem;
+  background-color: #fff;
 }
 
 .card {
@@ -110,22 +116,20 @@ body {
   border-radius: .75em;
   font-size: 1.125rem;
   text-align: center;
+  background-color: #fff;
 }
 
 .card img {
   width: 12em;
   margin: 0 0 1.5rem;
 }
-
 .card h2 {
   margin: 0 0 1.5rem;
 }
-
 .card p {
   max-width: 28em;
   margin: 0 0 1.5rem;
 }
-
 .card a {
   display: inline-block;
   background-color: #bea59b;
@@ -135,8 +139,11 @@ body {
   font-weight: bold;
   text-decoration: none;
 }
+.card a:hover {
+  border: 2px solid #522806;
+}
 
-.footer {
+footer {
   background-color: #522806;
   border-top: .3rem solid #bea59b;
   color: #fff;
@@ -145,6 +152,6 @@ body {
   padding: 1rem;
 }
 
-.footer * {
+footer * {
   margin: 0;
 }
