--- a/css/main.css
+++ b/css/main.css
@@ -56,12 +56,10 @@ body {
   text-decoration: none;
 }
 
-.nav a:hover {
-  border: 2px solid #fff;
-}
-
+.nav a:hover,
 .nav a:focus {
-  outline: 3px solid #fff;
+  color: #fff;
+  outline: .5em solid #fff;
 }
 
 .banner {
@@ -78,7 +76,7 @@ body {
   width: 100%;
 }
 
-.banner section {
+.banner div {
   grid-area: banner;
   align-self: center;
   justify-self: center;
@@ -96,25 +94,15 @@ body {
   display: inline-block;
   background-color: transparent;
   padding: .5em 1.5em .6em;
-  border: .3rem solid #fff;
+  border: .3rem solid #bea59b;
   border-radius: 1em;
   color: #fff;
   font-weight: bold;
   text-decoration: none;
 }
 
-.banner a:hover {
-  background-color: #fff;
-  color: #522806;
-}
-
-.banner a:focus {
-  outline: 3px solid pink;
-}
-
 .ship {
   padding: 2rem;
-  background-color: #fff;
 }
 
 .card {
@@ -128,7 +116,6 @@ body {
   border-radius: .75em;
   font-size: 1.125rem;
   text-align: center;
-  background-color: #fff;
 }
 
 .card img {
@@ -155,11 +142,7 @@ body {
   text-decoration: none;
 }
 
-.card a:hover {
-  border: 2px solid #522806;
-}
-
-footer {
+.footer {
   background-color: #522806;
   border-top: .3rem solid #bea59b;
   color: #fff;
@@ -168,6 +151,6 @@ footer {
   padding: 1rem;
 }
 
-footer * {
+.footer * {
   margin: 0;
 }
