--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: #522806;
   font-family: "Libre Baskerville", serif;
 }
 
@@ -56,10 +56,12 @@ body {
   text-decoration: none;
 }
 
-.nav a:hover,
+.nav a:hover {
+  border: 2px solid #fff;
+}
+
 .nav a:focus {
-  color: #fff;
-  outline: .5em solid #fff;
+  outline: 3px solid #fff;
 }
 
 .banner {
@@ -76,7 +78,7 @@ body {
   width: 100%;
 }
 
-.banner div {
+.banner section {
   grid-area: banner;
   align-self: center;
   justify-self: center;
@@ -89,19 +91,30 @@ body {
 .banner p {
   margin: 0 0 1.5rem;
 }
+
 .banner a {
   display: inline-block;
   background-color: transparent;
   padding: .5em 1.5em .6em;
-  border: .3rem solid #bea59b;
+  border: .3rem solid #fff;
   border-radius: 1em;
   color: #fff;
   font-weight: bold;
   text-decoration: none;
 }
 
+.banner a:hover {
+  background-color: #fff;
+  color: #522806;
+}
+
+.banner a:focus {
+  outline: 3px solid pink;
+}
+
 .ship {
   padding: 2rem;
+  background-color: #fff;
 }
 
 .card {
@@ -115,17 +128,16 @@ body {
   border-radius: .75em;
   font-size: 1.125rem;
   text-align: center;
+  background-color: #fff;
 }
 
 .card img {
   width: 12em;
   margin: 0 0 1.5rem;
 }
-
 .card h2 {
   margin: 0 0 1.5rem;
 }
-
 .card p {
   max-width: 28em;
   margin: 0 0 1.5rem;
@@ -141,7 +153,11 @@ body {
   text-decoration: none;
 }
 
-.footer {
+.card a:hover {
+  border: 2px solid #522806;
+}
+
+footer {
   background-color: #522806;
   border-top: .3rem solid #bea59b;
   color: #fff;
@@ -150,6 +166,6 @@ body {
   padding: 1rem;
 }
 
- * {
+footer * {
   margin: 0;
 }
